Add font controller to single-element page

--- a/single-element.html
+++ b/single-element.html
@@ -1287,12 +1287,12 @@
                             </div>
 
                             <div class="col-xl-3">
-                                <div class="single-element-action-area">
+                                <div class="single-element-action-area stickyx">
                                     <div class="font-size-controller-btn-area">
                                         <div class="font-size-controller-btn-wrapper d-flex align-items-center">
                                             <button class="font-size-minus">A-</button>
                                             <button class="active font-size-normal">A</button>
-                                            <button class="font-size-minus">A+</button>
+                                            <button class="font-size-plus">A+</button>
                                         </div>
                                     </div>
                                     <ul class="social-share-list social-share-list--style-1 d-flex align-items-center flex-wrap">
