--- a/single-element.html
+++ b/single-element.html
@@ -447,8 +447,8 @@
                                 <div class="sidebar-nav stickyx">
                                     <nav class="side-nav">
                                         <ul class="parent-item-list"> 
-                                            <li class="nav-item">
-                                                <a href="#elements" class="nav-link d-flex align-items-center">
+                                            <li class="nav-item" id="homex">
+                                                <a href="#elements" class="nav-main nav-link d-flex align-items-center">
                                                     <div class="icon d-flex justify-content-center align-items-center">
                                                         <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                             <path d="M8.075 1.41289L12.1437 3.60664C12.6187 3.86289 12.6187 4.59414 12.1437 4.85039L8.075 7.04414C7.7125 7.23789 7.2875 7.23789 6.925 7.04414L2.85625 4.85039C2.38125 4.59414 2.38125 3.86289 2.85625 3.60664L6.925 1.41289C7.2875 1.21914 7.7125 1.21914 8.075 1.41289Z" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
@@ -481,7 +481,7 @@
                                                     </li>
                                                 </ul>
                                             </li>
-                                            <li class="nav-item">
+                                            <li class="nav-item" id="homex2">
                                                 <a href="#content" class="nav-link d-flex align-items-center">
                                                     <div class="icon d-flex justify-content-center align-items-center">
                                                         <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1278,6 +1278,15 @@
                                                     Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris nullam the integer quam dolor nunc semper. Ornare non nulla faucibus pulvinar vulputate neque. Th Suscipit the as tristique nam enim <span>Theme option > Header > Top of Header > Menu Elements</span> ut as eget egestas as ultrices diam. Sem fusce pretium as nunc.Malesuada a commodo the as pellente in pretium tincidunt.
                                                 </p>
                                             </div>
+                                        </div>
+                                        <div class="widget-title-area">
+                                            <h3 class="title">Tooltip &amp; Direction</h3>
+                                            <p class="para-text">Estimated reading: 3 minutes 991 views</p>
+                                        </div>
+                                        <div class="recovery-doc">
+                                            <form action="">
+                                                <textarea name="" id="" cols="30" rows="5"></textarea>
+                                            </form>
                                         </div>
                                     </section>
                                     <div class="layout-info">
