Add Layouts content to single-element page

--- a/single-element.html
+++ b/single-element.html
@@ -1457,10 +1457,81 @@
                                             </div>
                                         </div>
                                     </section>
+                                    <section class="layouts-info-layout">
+                                        <div class="main-heading-area wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
+                                            <h3 class="title">Layouts</h3>
+                                            <p class="para-text">Effortless Online Documentation WordPress Theme, the Way It Should Be</p>
+                                        </div>
+                                        <div class="call-to-action-area-wrapper">
+                                            <div class="widget-title-area wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
+                                                <h3 class="title">Call to Action</h3>
+                                                <p class="para-text">Estimated reading: 3 minutes 991 views</p>
+                                            </div>
 
-                                    <div class="layout-info">
-                                        <h1>3RD</h1>
-                                    </div>
+                                            <div class="single-call-to-action-area wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
+                                                <section class="call-to-action-section call-to-action-section--style-2">
+                                                    <div class="call-to-action-content-wrapper d-flex align-items-center">
+                                                        <div class="section-text-content">
+                                                            <h2 class="section-heading wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
+                                                                Marketing solution that just makes sense
+                                                            </h2>
+                                                        </div>
+                                                        <button class="call-to-action-btn wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
+                                                            Get 14 Days Free Trial
+                                                        </button>
+                                                    </div>
+                                                </section>
+                                                <div class="title-area wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="600ms">
+                                                    <h3 class="title">01_Call to Action</h3>
+                                                    <p class="para-text">Give custom category/single post slug name for your documentation.</p>
+                                                </div>
+                                            </div>
+
+                                            <div class="single-call-to-action-area wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
+                                                <section class="call-to-action-section call-to-action-section--style-3">
+                                                    <div class="call-to-action-content-wrapper">
+                                                        <div class="section-text-content text-center">
+                                                            <h2 class="section-heading text-center wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
+                                                                Marketing solution that just makes sense
+                                                            </h2>
+                                                            <button class="call-to-action-btn wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
+                                                                Go to Live Chat
+                                                            </button>
+                                                        </div>
+                                                    </div>
+                                                </section>
+                                                <div class="title-area wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="600ms">
+                                                    <h3 class="title">02_Call to Action</h3>
+                                                    <p class="para-text">Give custom category/single post slug name for your documentation.</p>
+                                                </div>
+                                            </div>
+
+                                            <div class="single-call-to-action-area wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="600ms">
+                                                <section class="call-to-action-section call-to-action-section--style-4">
+                                                    <div class="call-to-action-content-wrapper">
+                                                        <div class="section-text-content">
+                                                            <h2 class="section-heading wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
+                                                                Marketing solution that just makes sense
+                                                            </h2>
+                                                            <button class="call-to-action-btn wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
+                                                                Go to Live Chat
+                                                            </button>
+                                                        </div>
+                                                    </div>
+                                                </section>
+                                                <div class="title-area wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="600ms">
+                                                    <h3 class="title">03_Call to Action</h3>
+                                                    <p class="para-text">Give custom category/single post slug name for your documentation.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="banner-design-area">
+                                            <div class="widget-title-area wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
+                                                <h3 class="title">Banner Design</h3>
+                                                <p class="para-text">Estimated reading: 3 minutes 991 views</p>
+                                            </div>
+                                        </div>
+                                    </section>
                                 </div>
                             </div>
 
