side-navbar expand with scroll

--- a/single-element.html
+++ b/single-element.html
@@ -447,7 +447,7 @@
                                 <div class="sidebar-nav stickyx">
                                     <nav class="side-nav">
                                         <ul class="parent-item-list"> 
-                                            <li class="nav-item" id="homex">
+                                            <li class="nav-item parent-nav-item" id="">
                                                 <a href="#elements" class="nav-main nav-link d-flex align-items-center">
                                                     <div class="icon d-flex justify-content-center align-items-center">
                                                         <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -481,7 +481,7 @@
                                                     </li>
                                                 </ul>
                                             </li>
-                                            <li class="nav-item" id="homex2">
+                                            <li class="nav-item parent-nav-item" id="">
                                                 <a href="#content" class="nav-link d-flex align-items-center">
                                                     <div class="icon d-flex justify-content-center align-items-center">
                                                         <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -513,6 +513,28 @@
                                                     </li>
                                                     <li class="nav-item no_icon">
                                                         <a href="#accordions-widget" class="nav-link">Accordions Widget</a>
+                                                    </li>
+                                                </ul>
+                                            </li>
+                                            <li class="nav-item parent-nav-item" id="">
+                                                <a href="#layouts" class="nav-link d-flex align-items-center">
+                                                    <div class="icon d-flex justify-content-center align-items-center">
+                                                        <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                            <path d="M9.75715 2.18999L14.1821 4.15499C15.4571 4.71749 15.4571 5.64749 14.1821 6.20999L9.75715 8.17499C9.25465 8.39999 8.42965 8.39999 7.92715 8.17499L3.50215 6.20999C2.22715 5.64749 2.22715 4.71749 3.50215 4.15499L7.92715 2.18999C8.42965 1.96499 9.25465 1.96499 9.75715 2.18999Z" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                                                            <path d="M2.25 8.25C2.25 8.88 2.7225 9.6075 3.3 9.8625L8.3925 12.1275C8.7825 12.3 9.225 12.3 9.6075 12.1275L14.7 9.8625C15.2775 9.6075 15.75 8.88 15.75 8.25" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                                                            <path d="M2.25 12C2.25 12.6975 2.6625 13.3275 3.3 13.6125L8.3925 15.8775C8.7825 16.05 9.225 16.05 9.6075 15.8775L14.7 13.6125C15.3375 13.3275 15.75 12.6975 15.75 12" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                                                        </svg>
+                                                    </div>
+                                                    Layouts
+                                                    <span class="arrow">
+                                                        <svg width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                            <path d="M10.625 6.375C10.3789 6.375 10.1602 6.29297 9.99609 6.12891L6.25 2.38281L2.47656 6.12891C2.14844 6.48438 1.57422 6.48438 1.24609 6.12891C0.890625 5.80078 0.890625 5.22656 1.24609 4.89844L5.62109 0.523438C5.94922 0.167969 6.52344 0.167969 6.85156 0.523438L11.2266 4.89844C11.582 5.22656 11.582 5.80078 11.2266 6.12891C11.0625 6.29297 10.8438 6.375 10.625 6.375Z" fill="black"/>
+                                                        </svg>
+                                                    </span>
+                                                </a>
+                                                <ul class="list-unstyled dropdown_nav">
+                                                    <li class="nav-item no_icon page-item-2746">
+                                                        <a href="#video-widget" class="nav-link">Call to action</a>
                                                     </li>
                                                 </ul>
                                             </li>
@@ -1457,7 +1479,7 @@
                                             </div>
                                         </div>
                                     </section>
-                                    <section class="layouts-info-layout">
+                                    <section id="layouts" class="layouts-info-layout">
                                         <div class="main-heading-area wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                             <h3 class="title">Layouts</h3>
                                             <p class="para-text">Effortless Online Documentation WordPress Theme, the Way It Should Be</p>
