--- a/single-element.html
+++ b/single-element.html
@@ -465,7 +465,8 @@
                                                 </a>
                                                 <ul class="list-unstyled dropdown_nav">
                                                     <li class="nav-item no_icon page-item-2746">
-                                                        <a href="#documentation-features" class="nav-link">Documentation Features</a>
+                                                        <span class="progress-indicator"></span>
+                                                        <a href="#documentation-features" class="nav-link active">Documentation Features</a>
                                                     </li>
                                                     <li class="nav-item no_icon">
                                                         <a href="#tabs-widget" class="nav-link">Tabs Widget</a>
