--- a/single-element.html
+++ b/single-element.html
@@ -466,7 +466,7 @@
                                                 <ul class="list-unstyled dropdown_nav">
                                                     <li class="nav-item no_icon page-item-2746">
                                                         <span class="progress-indicator"></span>
-                                                        <a href="#documentation-features" class="nav-link active">Documentation Features</a>
+                                                        <a href="#documentation-features" class="nav-link">Documentation Features</a>
                                                     </li>
                                                     <li class="nav-item no_icon">
                                                         <a href="#tabs-widget" class="nav-link">Tabs Widget</a>
@@ -501,7 +501,8 @@
                                                 </a>
                                                 <ul class="list-unstyled dropdown_nav">
                                                     <li class="nav-item no_icon page-item-2746">
-                                                        <a href="#video-widget" class="nav-link">Video Widget</a>
+                                                        <span class="progress-indicator"></span>
+                                                        <a href="#video-widget" class="nav-link test">Video Widget</a>
                                                     </li>
                                                     <li class="nav-item no_icon">
                                                         <a href="#table-widget" class="nav-link">Table Widget</a>
