Add line-scroll to content dropdown menus

--- a/single-element.html
+++ b/single-element.html
@@ -465,20 +465,34 @@
                                                 </a>
                                                 <ul class="list-unstyled dropdown_nav">
                                                     <li class="nav-item no_icon page-item-2746">
-                                                        <span class="progress-indicator"></span>
-                                                        <a href="#documentation-features" class="nav-link">Documentation Features</a>
+                                                        <a href="#documentation-features" class="nav-link">
+                                                            Documentation Features
+                                                            <span class="progress-indicator"></span>
+                                                        </a>
                                                     </li>
                                                     <li class="nav-item no_icon">
-                                                        <a href="#tabs-widget" class="nav-link">Tabs Widget</a>
+                                                        <a href="#tabs-widget" class="nav-link">
+                                                            Tabs Widget
+                                                            <span class="progress-indicator"></span>
+                                                        </a>
                                                     </li>
                                                     <li class="nav-item no_icon">
-                                                        <a href="#message-widget" class="nav-link">Message Widget</a>
+                                                        <a href="#message-widget" class="nav-link">
+                                                            Message Widget
+                                                            <span class="progress-indicator"></span>
+                                                        </a>
                                                     </li>
                                                     <li class="nav-item no_icon">
-                                                        <a href="#accordions-widget" class="nav-link">Accordions Widget</a>
+                                                        <a href="#xaccordions-widget" class="nav-link">
+                                                            Accordions Widget
+                                                            <span class="progress-indicator"></span>
+                                                        </a>
                                                     </li>
                                                     <li class="nav-item no_icon">
-                                                        <a href="#cheatsheet-widget" class="nav-link">Cheatsheet Widget</a>
+                                                        <a href="#cheatsheet-widget" class="nav-link">
+                                                            Cheatsheet Widget
+                                                            <span class="progress-indicator"></span>
+                                                        </a>
                                                     </li>
                                                 </ul>
                                             </li>
@@ -501,20 +515,34 @@
                                                 </a>
                                                 <ul class="list-unstyled dropdown_nav">
                                                     <li class="nav-item no_icon page-item-2746">
-                                                        <span class="progress-indicator"></span>
-                                                        <a href="#video-widget" class="nav-link test">Video Widget</a>
+                                                        <a href="#video-widget" class="nav-link">
+                                                            Video Widget
+                                                            <span class="progress-indicator"></span>
+                                                        </a>
                                                     </li>
                                                     <li class="nav-item no_icon">
-                                                        <a href="#table-widget" class="nav-link">Table Widget</a>
+                                                        <a href="#table-widget" class="nav-link">
+                                                            Table Widget
+                                                            <span class="progress-indicator"></span>
+                                                        </a>
                                                     </li>
                                                     <li class="nav-item no_icon">
-                                                        <a href="#tooltip" class="nav-link">tooltip</a>
+                                                        <a href="#tooltip" class="nav-link">
+                                                            tooltip
+                                                            <span class="progress-indicator"></span>
+                                                        </a>
                                                     </li>
                                                     <li class="nav-item no_icon">
-                                                        <a href="#account-recovery-doc" class="nav-link">Account Recovery Doc</a>
+                                                        <a href="#account-recovery-doc" class="nav-link">
+                                                            Account Recovery Doc
+                                                            <span class="progress-indicator"></span>
+                                                        </a>
                                                     </li>
                                                     <li class="nav-item no_icon">
-                                                        <a href="#accordions-widget" class="nav-link">Accordions Widget</a>
+                                                        <a href="#accordions-widget" class="nav-link">
+                                                            Accordions Widget
+                                                            <span class="progress-indicator"></span>
+                                                        </a>
                                                     </li>
                                                 </ul>
                                             </li>
@@ -1226,12 +1254,13 @@
                                             </div>
                                         </div>
                                     </section>
+
                                     <section id="content" class="content-info-layout">
                                         <div class="main-heading-area">
                                             <h3 class="title">Content</h3>
                                             <p class="para-text">Effortless Online Documentation WordPress Theme, the Way It Should Be</p>
                                         </div>
-                                        <div class="video-widget-area widget-area">
+                                        <div id="video-widget" class="video-widget-area widget-area">
                                             <div class="widget-title-area">
                                                 <h3 class="title">Video Widget</h3>
                                                 <p class="para-text">Estimated reading: 3 minutes 991 views</p>
@@ -1260,7 +1289,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="table-widget-area widget-area">
+                                        <div id="table-widget" class="table-widget-area widget-area">
                                             <div class="widget-title-area">
                                                 <h3 class="title">Table Widget</h3>
                                                 <p class="para-text">Estimated reading: 3 minutes 991 views</p>
@@ -1288,7 +1317,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="tooltip-and-direction widget-area">
+                                        <div id="tooltip" class="tooltip-and-direction widget-area">
                                             <div class="widget-title-area">
                                                 <h3 class="title">Tooltip & Direction</h3>
                                                 <p class="para-text">Estimated reading: 3 minutes 991 views</p>
@@ -1303,7 +1332,7 @@
                                                 </p>
                                             </div>
                                         </div>
-                                        <div class="recovery-doc-area widget-area">
+                                        <div id="account-recovery-doc" class="recovery-doc-area widget-area">
                                             <div class="widget-title-area">
                                                 <h3 class="title">Account Recovery Doc</h3>
                                                 <p class="para-text">Estimated reading: 3 minutes 991 views</p>
@@ -1314,7 +1343,7 @@
                                                 </form>
                                             </div>
                                         </div>
-                                        <div class="accordion-widget-area widget-area">
+                                        <div id="accordions-widget" class="accordion-widget-area widget-area">
                                             <div class="widget-title-area">
                                                 <h3 class="title">Accordions Widget</h3>
                                                 <p class="para-text">Estimated reading: 5 minutes 808 views</p>
@@ -1481,6 +1510,7 @@
                                             </div>
                                         </div>
                                     </section>
+
                                     <section id="layouts" class="layouts-info-layout">
                                         <div class="main-heading-area wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                             <h3 class="title">Layouts</h3>
